# procgen

./: .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  JitterRenderer.cpp  JitterRenderer.hpp  LICENSE  Material.cpp  Material.hpp  README.md  RenderSettings.cpp  RenderSettings.hpp  bezier.hpp  doodle_of_the_day.py  fcolor.hpp  gui_main.cpp  helper.hpp  makefile  movers.hpp  movie.sh  rando.cpp.cpp  rando.hpp  renderer.cpp
shaders/: frag.glsl  spline_frag.glsl  spline_vert.glsl  twotris_frag.glsl  vert.glsl
www/: doodle_of_the_day.py  of_the_day.html  spirals.css
